customised headers and banners & fixed spacing issue with carousel from template's original index

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
      font-family: 'Poppins', sans-serif;
      line-height: 1.80857;
      font-weight: normal;
-     background: url(../images/body_bg.png);
+     background: url(../images/bg.jpg);
      background-size: 100% 100%;
      background-position: center;
      background-repeat: no-repeat;
@@ -541,7 +541,7 @@ ul.conta_top li a {
 /** about section **/
 
 .about {
-     background: #fff;
+     background: rgba(255, 255, 255, .5);
      padding: 90px 0;
      margin-top: 180px;
      position: relative;
@@ -550,7 +550,7 @@ ul.conta_top li a {
 .about::before {
      position: absolute;
      content: "";
-     background: url(../images/about_left.png);
+     /* background: url(../images/about_left.png); */
      background-repeat: no-repeat;
      width: 360px;
      height: 212px;
@@ -563,7 +563,7 @@ ul.conta_top li a {
 
 .about .titlepage h2 {
      padding-bottom: 30px;
-     color: #1e1e1e;
+     color: white;
 }
 
 .about .titlepage p {
